// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput TagInput autoWidthVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 80%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
      <span
        class="t-input__input-pre"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 80%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React1
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <div
          class="t-tag-input__prefix"
        >
          Controlled: 
        </div>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React2
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <div
          class="t-tag-input__prefix"
        >
          UnControlled: 
        </div>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React3
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput collapsedVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 80%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark"
        >
          +4
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark"
        >
          更多(3)
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Miniprogram
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark"
        >
          More(2)
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput customTagVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 80%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
            style="max-width: 20px; max-height: 20px; border-radius: 50%;"
          />
           
          <span>
              StudentA
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
            style="max-width: 20px; max-height: 20px; border-radius: 50%;"
          />
           
          <span>
              StudentB
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark"
        >
          +1
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <br />
  <br />
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          style="margin-right: 4px;"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
            style="max-width: 20px; max-height: 20px; border-radius: 50%;"
          />
           
          <span>
              StudentA
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          style="margin-right: 4px;"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
            style="max-width: 20px; max-height: 20px; border-radius: 50%;"
          />
           
          <span>
              StudentB
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          style="margin-right: 4px;"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
            style="max-width: 20px; max-height: 20px; border-radius: 50%;"
          />
           
          <span>
              StudentC
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput excessVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 80%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <div
          class="t-tag-input__prefix"
        >
          Scroll: 
        </div>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <div
          class="t-tag-input__prefix"
        >
          BreakLine: 
        </div>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput maxVue demo works fine 1`] = `
<div
  style="width: 100%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="最多只能输入 3 个标签"
        type="text"
        unselectable="off"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 80%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-s t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-s t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-s t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-l t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-l t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-l t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 100%;"
>
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      禁用状态：
    </label>
     
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line"
    >
      <div
        class="t-input t-size-m t-is-disabled t-is-default t-input--prefix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-is-disabled t-tag--disabled"
          >
            Vue
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-is-disabled t-tag--disabled"
          >
            React
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-is-disabled t-tag--disabled"
          >
            Miniprogram
          </span>
        </div>
        <input
          autocomplete=""
          class="t-input__inner"
          disabled="disabled"
          placeholder=""
          type="text"
          unselectable="off"
        />
      </div>
    </div>
  </div>
   
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      只读状态：
    </label>
     
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            Vue
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            React
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            Miniprogram
          </span>
        </div>
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          type="text"
          unselectable="off"
        />
      </div>
      <div
        class="t-input__tips t-input__tips--default"
      >
        这是普通文本提示
      </div>
    </div>
  </div>
   
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      成功状态：
    </label>
     
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line"
    >
      <div
        class="t-input t-size-m t-is-success t-input--prefix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            Vue
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            React
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            Miniprogram
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          type="text"
          unselectable="off"
        />
      </div>
      <div
        class="t-input__tips t-input__tips--success"
      >
        校验通过文本提示
      </div>
    </div>
  </div>
   
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      告警状态：
    </label>
     
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line"
    >
      <div
        class="t-input t-size-m t-is-warning t-input--prefix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            Vue
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            React
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            Miniprogram
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          type="text"
          unselectable="off"
        />
      </div>
      <div
        class="t-input__tips t-input__tips--warning"
      >
        校验不通过文本提示
      </div>
    </div>
  </div>
   
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      错误状态：
    </label>
     
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line"
    >
      <div
        class="t-input t-size-m t-is-error t-input--prefix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            Vue
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            React
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            Miniprogram
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          type="text"
          unselectable="off"
        />
      </div>
      <div
        class="t-input__tips t-input__tips--error"
      >
        校验存在严重问题文本提示
      </div>
    </div>
  </div>
</div>
`;

exports[`TagInput TagInput themeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="width: 80%;"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
        >
          Miniprogram
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
        >
          Miniprogram
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
        >
          Miniprogram
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
        >
          Vue
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
        >
          React
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
        >
          Miniprogram
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
    </div>
  </div>
</div>
`;
